--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tg-hegends",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "build": "echo 'Skipping build'",
-    "start": "node index.js",
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
