--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "borsh": "^2.0.0",
+    "bs58": "^4.0.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
