--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "borsh": "^2.0.0",
-    "bs58": "^4.0.1"
+    "bs58": "^4.0.1",
+    "dotenv": "^16.4.5"
   },
   "keywords": [],
   "author": "",
