--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "tg-hegends",
   "version": "1.0.0",
   "main": "api/index.js",
+  "type": "module",
   "scripts": {
     "build": "echo 'Skipping build'",
     "start": "node api/index.js",
+    "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
+    "@debridge-finance/solana-transaction-parser": "^2.0.1",
+    "@project-serum/anchor": "^0.26.0",
+    "bn.js": "^5.2.1",
     "borsh": "^2.0.0",
     "bs58": "^4.0.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "nodemon": "^3.1.7"
   },
   "keywords": [],
   "author": "",
