--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "tg-hegends",
   "version": "1.0.0",
   "main": "api/index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "echo 'Skipping build'",
     "start": "node api/index.js",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
