--- a/.env-sample
+++ b/.env-sample
@@ -1,12 +1,17 @@
-BOT_TOKEN=""
-MAIN_CHAT=""
-TEST_CHAT=""
-PROD=false
-HELIUS_KEY=""
-HELIUS_RPC_URL=""
+BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+HELIUS_KEY=
+HELIUS_RPC_URL=
+RPC_URL=
 
 # Express
-PORT=""
+PORT=
 
 # Coingecko
-COINGECKO_API_KEY=""
+COINGECKO_API_KEY=
+
+# X Credentials
+ACCESS_TOKEN=
+ACCESS_TOKEN_SECRET=
+API_KEY=
+API_SECRET=
