--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "bs58": "^4.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "axios": "^1.7.7",
+    "form-data": "^4.0.0",
+    "oauth-1.0a": "^2.2.6",
+    "crypto": "^1.0.1",
+    "query-string": "^9.1.0",
+    "twitter-api-v2": "^1.18.0"
   },
   "keywords": [],
   "author": "",
